--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HRSD AI Executive Office</title>
-    <link href="./HRSD AI Executive Office 0808_files/css2" rel="stylesheet">
-    <link rel="stylesheet" href="./HRSD AI Executive Office 0808_files/all.min.css">
-    <script src="./HRSD AI Executive Office 0808_files/marked.min.js.download"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <!-- Include Chart.js from CDN -->
-    <script src="./HRSD AI Executive Office 0808_files/chart.umd.min.js.download"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         :root {
             --primary-blue: #00A99D;
@@ -2370,7 +2370,7 @@
         <div class="header-right">
             <div class="user-profile">
                 <span class="welcome-text">Welcome Ahmad</span>
-                <img src="https://placehold.co/40x40/00A99D/ffffff?text=A" alt="User Avatar">
+                <img src="https://ui-avatars.com/api/?name=Ahmad&background=00A99D&color=fff&size=128" alt="User Avatar">
             </div>
             <button class="mobile-menu-btn"><i class="fas fa-bars"></i></button>
         </div>
@@ -2407,7 +2407,7 @@
                     
                     <!-- Single Agent Display (for single mode) -->
                     <div class="single-agent-display" id="singleAgentDisplay">
-                        <img id="singleAgentAvatar" src="./HRSD AI Executive Office 0808_files/ai-voice-agent.png" alt="Agent Avatar" class="single-agent-avatar">
+                        <img id="singleAgentAvatar" src="https://api.dicebear.com/7.x/bottts/svg?seed=Hakim" alt="Agent Avatar" class="single-agent-avatar">
                         <div class="single-agent-info">
                             <div class="single-agent-name" id="singleAgentName">Hakim Nüruddin</div>
                             <div class="single-agent-title" id="singleAgentTitle">AI Executive Office Agent</div>
@@ -2431,7 +2431,7 @@
                         <label for="agent-toggle-hakim" class="agent-toggle">
                             <span class="agent-toggle-slider"></span>
                         </label>
-                        <img src="./HRSD AI Executive Office 0808_files/ai-voice-agent.png" alt="Hakim Nüruddin" class="agent-mini-avatar">
+                        <img src="https://api.dicebear.com/7.x/bottts/svg?seed=Hakim" alt="Hakim Nüruddin" class="agent-mini-avatar">
                         <div class="agent-select-info">
                             <div class="agent-select-name">Hakim Nüruddin</div>
                             <div class="agent-select-title">AI Executive Office Agent</div>
@@ -2441,7 +2441,7 @@
                         <label for="agent-toggle-layla" class="agent-toggle">
                             <span class="agent-toggle-slider"></span>
                         </label>
-                        <img src="./HRSD AI Executive Office 0808_files/3f6fb035-158b-47f1-8c69-5fe9a407d4f2.png" alt="Layla Al-Farsi" class="agent-mini-avatar">
+                        <img src="https://api.dicebear.com/7.x/bottts/svg?seed=Layla" alt="Layla Al-Farsi" class="agent-mini-avatar">
                         <div class="agent-select-info">
                             <div class="agent-select-name">Layla Al-Farsi</div>
                             <div class="agent-select-title">Data Analytics Agent</div>
@@ -2451,7 +2451,7 @@
                         <label for="agent-toggle-omar" class="agent-toggle">
                             <span class="agent-toggle-slider"></span>
                         </label>
-                        <img src="./HRSD AI Executive Office 0808_files/bd99faca-67c4-4cc3-895e-06bed59a08d2.png" alt="Omar Mansour" class="agent-mini-avatar">
+                        <img src="https://api.dicebear.com/7.x/bottts/svg?seed=Omar" alt="Omar Mansour" class="agent-mini-avatar">
                         <div class="agent-select-info">
                             <div class="agent-select-name">Omar Mansour</div>
                             <div class="agent-select-title">AI Coordinator</div>
@@ -2475,10 +2475,10 @@
                 <div class="chat-interaction-area">
                     <div class="chat-messages" id="chatMessages">
                         <div class="message-bubble agent">
-                            <img src="./HRSD AI Executive Office 0808_files/ai-voice-agent.png" alt="Agent Avatar" class="avatar" data-persona-avatar="">
+                            <img src="https://api.dicebear.com/7.x/bottts/svg?seed=Hakim" alt="Agent Avatar" class="avatar" data-persona-avatar="">
                             <div class="content">Welcome your Highness. As-salāmu 'alaykum. I am Hakim, your AI Executive Office Agent. How may I assist you today?</div>
                         </div>
-                    <div class="message-bubble user"><img src="./HRSD AI Executive Office 0808_files/ffffff(1)" alt="user Avatar" class="avatar"><div class="content">Can you dig deeper into the topic of "Empowering Society &amp; Individuals" for me? Provide key details and current status.</div></div><div class="message-bubble agent"><img src="./HRSD AI Executive Office 0808_files/ai-voice-agent.png" alt="agent Avatar" class="avatar" data-persona-avatar=""><div class="content"><span class="agent-name-tag">Hakim Nüruddin</span><div><p><strong>To Your Highness,</strong></p>
+                    <div class="message-bubble user"><img src="https://ui-avatars.com/api/?name=Ahmad&background=00A99D&color=fff&size=128" alt="user Avatar" class="avatar"><div class="content">Can you dig deeper into the topic of "Empowering Society &amp; Individuals" for me? Provide key details and current status.</div></div><div class="message-bubble agent"><img src="https://api.dicebear.com/7.x/bottts/svg?seed=Hakim" alt="agent Avatar" class="avatar" data-persona-avatar=""><div class="content"><span class="agent-name-tag">Hakim Nüruddin</span><div><p><strong>To Your Highness,</strong></p>
 <p>The topic of "Empowering Society &amp; Individuals" is a central axis of the National Transformation Program and HRSD’s mandate. It moves beyond mere provision of services toward <em>sustainable enablement</em> and the cultivation of a productive, self-reliant citizenry.</p>
 <p>Here is a strategic summary detailing the key focus areas and current status as of Q4 2025.</p>
 <hr>
@@ -2531,7 +2531,7 @@
                         <input id="chatInput" type="text" placeholder="Ask me anything... Type or Talk">
                         <div class="chat-input-controls">
                             <button id="agentSelectorBtn" class="" title="Select Agent">
-                                <img src="./HRSD AI Executive Office 0808_files/ai-voice-agent.png" alt="Agent">
+                                <img src="https://api.dicebear.com/7.x/bottts/svg?seed=Hakim" alt="Agent">
                                 <i class="fas fa-chevron-down"></i>
                             </button>
                             <button id="chat-action-btn" title="Discuss a Topic"><i class="fas fa-plus"></i></button>
