--- a/index.html
+++ b/index.html
@@ -175,14 +175,17 @@
             flex-grow: 1;
             display: flex;
             flex-direction: column;
-            overflow-y: auto;
+            overflow: hidden;
+            min-height: 0;
         }
 
         .page-content {
             display: none;
             flex-grow: 1;
-            padding: 30px 40px;
-            gap: 30px;
+            padding: 20px 40px;
+            gap: 20px;
+            min-height: 0;
+            overflow: hidden;
         }
         .page-content.active {
             display: flex;
@@ -191,14 +194,16 @@
         .chat-section-container {
             flex: 2;
             display: flex;
-            gap: 30px;
+            gap: 20px;
             background: var(--container-bg);
             border-radius: 20px;
             border: 1px solid var(--border-color);
             backdrop-filter: blur(20px);
-            padding: 25px;
+            padding: 20px;
             min-width: 0;
-            max-height: 80vh;
+            min-height: 0;
+            max-height: none;
+            height: 100%;
             box-shadow: var(--shadow-lg);
         }
 
@@ -213,6 +218,8 @@
             padding: 20px;
             box-shadow: var(--shadow-lg);
             backdrop-filter: blur(20px);
+            min-height: 0;
+            height: 100%;
         }
 
         /* Removed old single persona image styles - now using multi-agent selection */
@@ -444,7 +451,8 @@
             display: flex;
             flex-direction: column;
             gap: 10px;
-            max-height: 400px;
+            flex: 1;
+            min-height: 0;
             overflow-y: auto;
             padding: 5px 0;
         }
@@ -699,8 +707,8 @@
             flex: 1;
         }
 
-        .chat-interaction-area { flex: 1; display: flex; flex-direction: column; min-width: 0; }
-        .chat-messages { flex: 1; overflow-y: auto; padding-right: 10px; }
+        .chat-interaction-area { flex: 1; display: flex; flex-direction: column; min-width: 0; min-height: 0; }
+        .chat-messages { flex: 1; overflow-y: auto; padding-right: 10px; min-height: 0; }
 
         .message-bubble {
             display: flex;
@@ -833,15 +841,16 @@
         }
 
         .chat-input-area {
-            padding-top: 20px;
+            padding-top: 15px;
             border-top: 1px solid var(--border-color);
             display: flex;
             align-items: center;
             gap: 15px;
             background: rgba(0, 0, 0, 0.1);
-            margin: 0 -25px -25px -25px;
-            padding: 20px 25px;
+            margin: 0 -20px -20px -20px;
+            padding: 15px 20px;
             border-radius: 0 0 20px 0; /* Only bottom-right corner of chat-area */
+            flex-shrink: 0;
         }
         .chat-input-controls { display: flex; align-items: center; gap: 12px; flex-shrink: 0; }
         #chatInput {
@@ -894,12 +903,13 @@
             border-radius: 20px;
             border: 1px solid var(--border-color);
             backdrop-filter: blur(20px);
-            padding: 25px;
+            padding: 20px;
             display: flex;
             flex-direction: column;
             gap: 15px;
             min-width: 280px;
-            max-height: 80vh;
+            min-height: 0;
+            height: 100%;
             box-shadow: var(--shadow-lg);
             overflow: hidden;
         }
@@ -910,12 +920,13 @@
             border-radius: 20px;
             border: 1px solid var(--border-color);
             backdrop-filter: blur(20px);
-            padding: 25px;
+            padding: 20px;
             display: flex;
             flex-direction: column;
             gap: 15px;
             min-width: 300px;
-            max-height: 80vh;
+            min-height: 0;
+            height: 100%;
             box-shadow: var(--shadow-lg);
             overflow: hidden;
         }
@@ -941,7 +952,7 @@
             transform: translateY(-2px);
             box-shadow: 0 4px 15px rgba(0, 169, 157, 0.4);
         }
-        .summary-content { font-size: 0.95rem; line-height: 1.7; color: var(--text-light); overflow-y: auto; flex: 1; }
+        .summary-content { font-size: 0.95rem; line-height: 1.7; color: var(--text-light); overflow-y: auto; flex: 1; min-height: 0; }
         .summary-content h4 {
             color: var(--primary-blue);
             margin-top: 20px;
