--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
             align-items: center;
             gap: 15px;
             background: rgba(0, 0, 0, 0.1);
-            margin: 0 -20px -20px -20px;
+         /*  margin: 0 -20px -20px -20px; */
             padding: 15px 20px;
             border-radius: 0 0 20px 0; /* Only bottom-right corner of chat-area */
             flex-shrink: 0;
