--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             /*padding: 20px;*/
             min-width: 0;
             min-height: 0;
-            max-height: calc(100vh - 220px)
+            max-height: calc(100vh - 180px);
             box-shadow: var(--shadow-lg);
         }
 
