--- a/index.html
+++ b/index.html
@@ -194,15 +194,15 @@
         .chat-section-container {
             flex: 2;
             display: flex;
-            /*gap: 20px;
-            background: var(--container-bg);*/
+            gap: 20px;
+            background: var(--container-bg);
             border-radius: 20px;
             border: 1px solid var(--border-color);
             backdrop-filter: blur(20px);
-            /*padding: 20px;*/
+            padding: 20px;
             min-width: 0;
             min-height: 0;
-            max-height: calc(100vh - 180px);
+            max-height: calc(100vh - 220px);
             box-shadow: var(--shadow-lg);
         }
 
@@ -878,7 +878,7 @@
             align-items: center;
             gap: 15px;
             background: rgba(0, 0, 0, 0.1);
-         /*  margin: 0 -20px -20px -20px; */
+            margin: 0 -20px -20px -20px;
             padding: 15px 20px;
             border-radius: 0 0 20px 0; /* Only bottom-right corner of chat-area */
             flex-shrink: 0;
