--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             gap: 12px;
             background: var(--container-bg);
             border: 1px solid var(--border-color);
-            border-radius: 20px;
+            border-radius: 20px 0px 0px 20px;
             padding: 20px;
             box-shadow: var(--shadow-lg);
             backdrop-filter: blur(20px);
