--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         .chat-section-container {
             flex: 2;
             display: flex;
-            gap: 20px;
+            /*gap: 20px;*/
             background: var(--container-bg);
             border-radius: 20px;
             border: 1px solid var(--border-color);
