--- a/index.html
+++ b/index.html
@@ -766,8 +766,8 @@
             height: 40px;
             border-radius: 50%;
             flex-shrink: 0;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-            border: 2px solid var(--border-color);
+			padding: 40px;
+
         }
         .message-bubble .content {
             padding: 14px 20px;
