--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
 
         .message-bubble {
             display: flex;
-            gap: 15px;
+            /*gap: 15px;*/
             margin-bottom: 20px;
             align-items: flex-start;
             animation: slideIn 0.3s ease-out;
@@ -766,7 +766,7 @@
             height: 40px;
             border-radius: 50%;
             flex-shrink: 0;
-			padding: 40px;
+			padding: 15px;
 
         }
         .message-bubble .content {
