--- a/index.html
+++ b/index.html
@@ -211,12 +211,12 @@
             display: flex;
             flex-direction: column;
             gap: 12px;
-            background: var(--container-bg);
-            border: 1px solid var(--border-color);
+            /*background: var(--container-bg);
+            border: 1px solid var(--border-color);*/
             border-radius: 20px 0px 0px 20px;
             padding: 20px;
-            box-shadow: var(--shadow-lg);
-            backdrop-filter: blur(20px);
+            /*box-shadow: var(--shadow-lg);
+            backdrop-filter: blur(20px);*/
             min-height: 0;
             max-height: calc(100vh - 220px);
         }
