--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
             border-radius: 20px;
             border: 1px solid var(--border-color);
             backdrop-filter: blur(20px);
-            padding: 20px;
-            min-width: 0;
+			padding: 40px 0px 0px 20px;
+			min-width: 0;
             min-height: 0;
             max-height: calc(100vh - 220px);
             box-shadow: var(--shadow-lg);
