--- a/index.html
+++ b/index.html
@@ -2508,9 +2508,9 @@
                     <div class="chat-messages" id="chatMessages">
                         <div class="message-bubble agent">
                             <img src="https://api.dicebear.com/7.x/bottts/svg?seed=Hakim" alt="Agent Avatar" class="avatar" data-persona-avatar="">
-                            <div class="content">Welcome your Highness. As-salāmu 'alaykum. I am Hakim, your AI Executive Office Agent. How may I assist you today?</div>
+                            <div class="content">Welcome your Excellency. As-salāmu 'alaykum. I am Hakim, your AI Executive Office Agent. How may I assist you today?</div>
                         </div>
-                    <div class="message-bubble user"><img src="https://ui-avatars.com/api/?name=Ahmad&background=00A99D&color=fff&size=128" alt="user Avatar" class="avatar"><div class="content">Can you dig deeper into the topic of "Empowering Society &amp; Individuals" for me? Provide key details and current status.</div></div><div class="message-bubble agent"><img src="https://api.dicebear.com/7.x/bottts/svg?seed=Hakim" alt="agent Avatar" class="avatar" data-persona-avatar=""><div class="content"><span class="agent-name-tag">Hakim Nüruddin</span><div><p><strong>To Your Highness,</strong></p>
+                    <div class="message-bubble user"><img src="https://ui-avatars.com/api/?name=Ahmad&background=00A99D&color=fff&size=128" alt="user Avatar" class="avatar"><div class="content">Can you dig deeper into the topic of "Empowering Society &amp; Individuals" for me? Provide key details and current status.</div></div><div class="message-bubble agent"><img src="https://api.dicebear.com/7.x/bottts/svg?seed=Hakim" alt="agent Avatar" class="avatar" data-persona-avatar=""><div class="content"><span class="agent-name-tag">Hakim Nüruddin</span><div><p><strong>To Your Excellency,</strong></p>
 <p>The topic of "Empowering Society &amp; Individuals" is a central axis of the National Transformation Program and HRSD’s mandate. It moves beyond mere provision of services toward <em>sustainable enablement</em> and the cultivation of a productive, self-reliant citizenry.</p>
 <p>Here is a strategic summary detailing the key focus areas and current status as of Q4 2025.</p>
 <hr>
@@ -2856,7 +2856,7 @@
             const personaData = [
                 { id: 'hakim', name: 'Hakim Nüruddin', title: 'AI Executive Office Agent', largeImg: 'https://hams.ai/images/ai-voice-agent.png', smallImg: 'https://hams.ai/images/ai-voice-agent.png', description: 'As your strategic partner, I provide high-level summaries, executive advice, and focus on strategic alignment for your key decisions.', systemPrompt: 'You are Hakim Nüruddin, an AI Executive Office Agent for HRSD in Saudi Arabia... Be concise, professional, and insightful. Provide strategic advice and summaries.' },
                 // Update Layla's systemPrompt for insights/charts
-                { id: 'layla', name: 'Layla Al-Farsi', title: 'Data Analytics Agent', largeImg: 'https://easy-peasy.ai/cdn-cgi/image/quality=80,format=auto,width=700/https://media.easy-peasy.ai/27feb2bb-aeb4-4a83-9fb6-8f3f2a15885e/3f6fb035-158b-47f1-8c69-5fe9a407d4f2.png', smallImg: 'https://easy-peasy.ai/cdn-cgi/image/quality=80,format=auto,width=700/https://media.easy-peasy.ai/27feb2bb-aeb4-4a83-9fb6-8f3f2a15885e/3f6fb035-158b-47f1-8c69-5fe9a407d4f2.png', description: 'As your data expert, I provide your Highness with key insights from around HRSD, identify trends, and offer detailed analytical support for your objectives.', systemPrompt: 'You are Layla Al-Farsi, a Data Analytics Agent for HRSD in Saudi Arabia. Your Highness requires data-driven insights. ALWAYS respond with concise analysis, key findings, and data points. When a visualization is appropriate (e.g., trends, comparisons), provide the necessary data in a Chart.js-compatible JSON format strictly enclosed within `[CHART_DATA:{...}]`. The JSON MUST be complete and valid. It MUST contain "type" (e.g., "bar", "line", "pie"), "labels" (array of strings), and "datasets" (array of objects, each with "label" and "data" properties). Example: `[CHART_DATA:{"type": "bar", "labels": ["Q1", "Q2"], "datasets": [{"label": "Metric A", "data": [10, 15]}]}]` Always include a brief textual explanation of the chart\'s insights immediately following the chart data marker. Focus strictly on providing analytical insights derived from data. Avoid conversational filler unless specifically asked.' }, // Added "MUST be complete and valid"
+                { id: 'layla', name: 'Layla Al-Farsi', title: 'Data Analytics Agent', largeImg: 'https://easy-peasy.ai/cdn-cgi/image/quality=80,format=auto,width=700/https://media.easy-peasy.ai/27feb2bb-aeb4-4a83-9fb6-8f3f2a15885e/3f6fb035-158b-47f1-8c69-5fe9a407d4f2.png', smallImg: 'https://easy-peasy.ai/cdn-cgi/image/quality=80,format=auto,width=700/https://media.easy-peasy.ai/27feb2bb-aeb4-4a83-9fb6-8f3f2a15885e/3f6fb035-158b-47f1-8c69-5fe9a407d4f2.png', description: 'As your data expert, I provide your Excellency with key insights from around HRSD, identify trends, and offer detailed analytical support for your objectives.', systemPrompt: 'You are Layla Al-Farsi, a Data Analytics Agent for HRSD in Saudi Arabia. Your Excellency requires data-driven insights. ALWAYS respond with concise analysis, key findings, and data points. When a visualization is appropriate (e.g., trends, comparisons), provide the necessary data in a Chart.js-compatible JSON format strictly enclosed within `[CHART_DATA:{...}]`. The JSON MUST be complete and valid. It MUST contain "type" (e.g., "bar", "line", "pie"), "labels" (array of strings), and "datasets" (array of objects, each with "label" and "data" properties). Example: `[CHART_DATA:{"type": "bar", "labels": ["Q1", "Q2"], "datasets": [{"label": "Metric A", "data": [10, 15]}]}]` Always include a brief textual explanation of the chart\'s insights immediately following the chart data marker. Focus strictly on providing analytical insights derived from data. Avoid conversational filler unless specifically asked.' }, // Added "MUST be complete and valid"
                 { id: 'omar', name: 'Omar Mansour', title: 'AI Coordinator', largeImg: 'https://easy-peasy.ai/cdn-cgi/image/quality=80,format=auto,width=700/https://media.easy-peasy.ai/2f8cd8b2-88d5-4865-b07e-cafd6403b72b/bd99faca-67c4-4cc3-895e-06bed59a08d2.png', smallImg: 'https://easy-peasy.ai/cdn-cgi/image/quality=80,format=auto,width=700/https://media.easy-peasy.ai/2f8cd8b2-88d5-4865-b07e-cafd6403b72b/bd99faca-67c4-4cc3-895e-06bed59a08d2.png', description: 'As your operational specialist, I manage schedules, coordinate between departments, and provide logistical support to ensure operational smoothness.', systemPrompt: 'You are Omar Mansour, an AI Coordinator for HRSD... Focus on logistics, scheduling, action items, and ensuring operational smoothness.' }
             ];
             let currentPersonaId = 'hakim';
@@ -2918,7 +2918,7 @@
             }
 
             function displayNewPersonaGreeting(persona) {
-                 let greeting = `Welcome your Highness. As-salāmu 'alaykum. I am ${persona.name}. ${persona.description} How may I be of service to your Highness today?`;
+                 let greeting = `Welcome your Excellency. As-salāmu 'alaykum. I am ${persona.name}. ${persona.description} How may I be of service to your Excellency today?`;
                  displayMessage('agent', greeting);
                  // Add greeting to history for context
                  // Check if history is empty or last message wasn't this greeting to avoid duplicates on quick switches
@@ -3782,7 +3782,7 @@ RESPOND ONLY WITH VALID JSON. NO OTHER TEXT.`;
                 const payload = {
                     contents: chatHistory,
                     systemInstruction: {
-                        parts: [{ text: `${systemPromptText} Your user is a high-level executive ("Your Highness"). The current date and time is ${new Date().toLocaleString('en-US', { timeZone: 'Asia/Riyadh' })}.` }]
+                        parts: [{ text: `${systemPromptText} Your user is a high-level executive ("Your Excellency"). The current date and time is ${new Date().toLocaleString('en-US', { timeZone: 'Asia/Riyadh' })}.` }]
                     },
                     generationConfig: {
                         maxOutputTokens: 8192,
@@ -3867,7 +3867,7 @@ RESPOND ONLY WITH VALID JSON. NO OTHER TEXT.`;
                 
                 // Create discussion-specific history
                 const discussionHistory = [];
-                const discussionContext = `Your Highness has requested a collaborative discussion among the AI agents about today's priorities and key insights. Please share your perspective based on your area of expertise.`;
+                const discussionContext = `Your Excellency has requested a collaborative discussion among the AI agents about today's priorities and key insights. Please share your perspective based on your area of expertise.`;
                 
                 // Each agent responds with their own context
                 for (let i = 0; i < agents.length; i++) {
@@ -3945,7 +3945,7 @@ RESPOND ONLY WITH VALID JSON. NO OTHER TEXT.`;
                 const payload = {
                     contents: conversationHistory,
                     systemInstruction: {
-                        parts: [{ text: `${systemPromptText} Your user is a high-level executive ("Your Highness"). The current date and time is ${new Date().toLocaleString('en-US', { timeZone: 'Asia/Riyadh' })}.` }]
+                        parts: [{ text: `${systemPromptText} Your user is a high-level executive ("Your Excellency"). The current date and time is ${new Date().toLocaleString('en-US', { timeZone: 'Asia/Riyadh' })}.` }]
                     },
                     generationConfig: {
                         maxOutputTokens: 1024, // Shorter for discussions
