Replace logo image source with local file

--- a/index.html
+++ b/index.html
@@ -2406,7 +2406,7 @@
     <!-- Header -->
     <header class="header">
         <div class="header-left">
-            <img src="https://www.hrsd.gov.sa/themes/custom/hrsd_saud/logo_en.svg" alt="HRSD Logo" class="hrsd-logo">
+            <img src="logo.png" alt="HRSD Logo" class="hrsd-logo">
             <span>| AI Executive Office</span>
         </div>
         <div class="header-right">
