--- a/index.html
+++ b/index.html
@@ -2510,55 +2510,7 @@
                             <img src="https://api.dicebear.com/7.x/bottts/svg?seed=Hakim" alt="Agent Avatar" class="avatar" data-persona-avatar="">
                             <div class="content">Welcome your Ahmad. As-salāmu 'alaykum. I am Hakim, your AI Executive Office Agent. How may I assist you today?</div>
                         </div>
-                    <div class="message-bubble user"><img src="https://ui-avatars.com/api/?name=Ahmad&background=00A99D&color=fff&size=128" alt="user Avatar" class="avatar"><div class="content">Can you dig deeper into the topic of "Empowering Society &amp; Individuals" for me? Provide key details and current status.</div></div><div class="message-bubble agent"><img src="https://api.dicebear.com/7.x/bottts/svg?seed=Hakim" alt="agent Avatar" class="avatar" data-persona-avatar=""><div class="content"><span class="agent-name-tag">Hakim Nüruddin</span><div><p><strong>To Your Ahmad,</strong></p>
-<p>The topic of "Empowering Society &amp; Individuals" is a central axis of the National Transformation Program and HRSD’s mandate. It moves beyond mere provision of services toward <em>sustainable enablement</em> and the cultivation of a productive, self-reliant citizenry.</p>
-<p>Here is a strategic summary detailing the key focus areas and current status as of Q4 2025.</p>
-<hr>
-<h3>STRATEGIC SUMMARY: EMPOWERING SOCIETY &amp; INDIVIDUALS</h3>
-<p><strong>Core Definition:</strong> Transitioning the population from reliance on social assistance to active economic participation, while ensuring a robust quality of life and strengthening community governance.</p>
-<table>
-<thead>
-<tr>
-<th align="left">Strategic Pillar</th>
-<th align="left">Key Details &amp; Focus</th>
-</tr>
-</thead>
-<tbody><tr>
-<td align="left"><strong>1. Human Capital &amp; Skills</strong></td>
-<td align="left"><strong>Focus:</strong> Future-proofing the workforce and ensuring a higher Saudi participation rate. Emphasis is on targeted vocational training, linking education outcomes to market demand, and private sector job creation programs (e.g., Nitaqat optimization).</td>
-</tr>
-<tr>
-<td align="left"><strong>2. Social Safety Nets Transformation</strong></td>
-<td align="left"><strong>Focus:</strong> Shifting social security from unconditional assistance to empowering, conditional support. Programs are now focused on targeted intervention for the most vulnerable, coupling financial aid with mandatory upskilling and job placement assistance (The <strong>Enablement Approach</strong>).</td>
-</tr>
-<tr>
-<td align="left"><strong>3. Non-Profit Sector Efficiency</strong></td>
-<td align="left"><strong>Focus:</strong> Increasing the Third Sector’s contribution to GDP and improving governance. Driving the digital transformation of non-profits to enhance transparency, optimize donation streams, and increase localized service delivery capacity.</td>
-</tr>
-</tbody></table>
-<hr>
-<h3>CURRENT STATUS &amp; METRICS (Q4 2025 Snapshot)</h3>
-<p>The focus this quarter has been on the integration of enablement tools and measuring the exit velocity from dependency programs.</p>
-<h4>1. Workforce Empowerment Metrics</h4>
-<ul>
-<li><strong>Nationalization Rate:</strong> The overarching Saudization rate is showing strong stability, with significant gains observed in high-value, specialized sectors (e.g., IT, Finance) due to targeted subsidies and training mandates. HRSD’s focus is now moving from quantity of jobs to <strong>quality and salary levels</strong>.</li>
-<li><strong>Unemployment:</strong> The national unemployment rate continues its downward trajectory, nearing pre-defined 2030 targets ahead of schedule. However, youth and female unemployment remain focus areas requiring bespoke, accelerated programs.</li>
-</ul>
-<h4>2. Social Program Integration</h4>
-<ul>
-<li><strong>Digital Profile Maturity:</strong> The unified digital platform for social benefits (linking data from the Ministry of Finance, HRSD, and other agencies) is highly operational. This integration is crucial for eliminating duplicate benefits and ensuring aid is strictly needs-based and conditional on participation in training/job search activities.</li>
-<li><strong>Exit Velocity:</strong> Early data models show an encouraging increase in the rate at which beneficiaries successfully transition off social security support and into stable employment (the <strong>"Enablement Quotient"</strong>). This validates the shift to conditional aid.</li>
-</ul>
-<h4>3. Community Resilience</h4>
-<ul>
-<li><strong>Non-Profit Governance:</strong> Governance maturity scores for large-scale national charities have significantly improved due to stricter regulatory oversight and mandatory digital reporting standards. This enhances public trust and attracts investment.</li>
-</ul>
-<hr>
-<h3>STRATEGIC INSIGHT</h3>
-<p>The next phase requires moving from <em>program implementation</em> to <em>holistic ecosystem measurement</em>.</p>
-<p>The primary risk is the potential for program overlap or lack of alignment between national training initiatives (Pillar 1) and social benefit conditioning (Pillar 2).</p>
-<p><strong>Recommendation:</strong> We must prioritize the development of a unified <strong>Individual Empowerment Index (IEI)</strong>. This index will move beyond simple employment figures to measure the sustained financial independence, quality of life, and civic contribution of individuals leaving assistance programs, ensuring true, long-term empowerment rather than temporary relief.</p>
-</div></div></div></div>
+               		</div>
                     <div class="chat-input-area">
                         <input id="chatInput" type="text" placeholder="Ask me anything... Type or Talk">
                         <div class="chat-input-controls">
