--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" style="--vh: 9.32px;"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HRSD AI Executive Office</title>
+    <title>AI Executive Office</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
@@ -2407,7 +2407,7 @@
     <header class="header">
         <div class="header-left">
             <img src="logo.png" alt="Logo" class="hrsd-logo">
-            <span>| AI Executive Office</span>
+            <span>AI Executive Office</span>
         </div>
         <div class="header-right">
             <div class="user-profile">
